--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,7 @@
                     Мы ценим каждого клиента и предлагаем вам стать одним из них на очень выгодных условиях. 
                     Каждому, кто закажет доставку питание на неделю, будет предоставлена скидка в размере <span>20%!</span>
                     <br><br>
-                    Акция закончится 20 мая в 00:00
+                    Акция закончится 31 декабря в 00:00
                 </div>
             </div>
             <div class="promotion__timer">
@@ -250,19 +250,19 @@
                 <div class="timer">
                     <div class="timer__block">
                         <span id="days">12</span>
-                        дней
+                        <div id="days__text">дней</div>
                     </div>
                     <div class="timer__block">
                         <span id="hours">20</span>
-                        часов
+                        <div id="hours__text">часов</div>
                     </div>
                     <div class="timer__block">
                         <span id="minutes">56</span>
-                        минут
+                        <div id="minutes__text">минут</div>
                     </div>
                     <div class="timer__block">
                         <span id="seconds">20</span>
-                        секунд
+                        <div id="seconds__text">секунд</div>
                     </div>
                 </div>
             </div>
